[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "google-genai>=1.54.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.6",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "trafilatura>=2.0.0",
    "xgboost>=3.1.2",
]
